[package]
name = "pl-project-connect-four"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
rand = "0.8.4"
chrono = "0.4"
rfd = "0.10.0"
rodio = "0.16.0"