[package]
name = "pl-project-connect-four"
version = "0.1.0"
edition = "2021"
authors = ["Ejub <ejub.sabic@stu.ibu.edu.ba>", "Amar <amar.fazlic@stu.ibu.edu.ba>","Saliha <saliha.mustafic@stu.ibu.edu.ba>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
chrono = "0.4"
rfd = "0.10.0"
rodio = "0.16.0"
